--- a/blueworks/templates/dashboard.html
+++ b/blueworks/templates/dashboard.html
@@ -309,7 +309,7 @@
             function confront(data) {
                 Highcharts.chart('thirth', {
                     title: {
-                        text: 'Difference employes'
+                        text: 'Difference entre employes'
                     },
                     yAxis: {
                         title: {
@@ -335,7 +335,7 @@
                             dataLabels: {
                                 enabled: true
                             },
-                            enableMouseTracking: false
+                            enableMouseTracking: true
                         }
                     },
                     responsive: {
